// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoList component should render 1`] = `
<div
  className="info-list"
>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Item 1
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Another item
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some more content
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoList component should render compact 1`] = `
<div
  className="info-list info-list--compact"
>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Item 1
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Another item
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some more content
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoList component should render without in 2 columns 1`] = `
<div
  className="info-list info-list--columns"
>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Item 1
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Another item
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some more content
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoList component should render without titles 1`] = `
<div
  className="info-list info-list--no-title"
>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Item 1
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
  <div
    className="info-list__item"
  >
    <div
      className="info-list__title"
    >
      <h5
        className="bold"
      >
        Another item
      </h5>
    </div>
    <div
      className="info-list__content"
    >
      <div>
        Some more content
      </div>
    </div>
  </div>
</div>
`;
